🥘 Added: View Dishes by Category
