# docs/swagger.json
@@ -1465,6 +1465,14 @@
                     "Seller"
                 ],
                 "summary": "Get all dishes",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category Id",
+                        "name": "category",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successfully fetched dishes",
